--- a/index_.html
+++ b/index_.html
@@ -54,7 +54,7 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						然，从我向你表白到现在已经有
+						然，我们在一起到现在已经有
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
@@ -76,9 +76,9 @@
 		var offsetX = $("#loveHeart").width() / 2;
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var together = new Date();
-		together.setFullYear(2017, 1, 05);
-		together.setHours(00);
-		together.setMinutes(01);
+		together.setFullYear(2017, 1, 09);
+		together.setHours(22);
+		together.setMinutes(10);
 		together.setSeconds(0);
 		together.setMilliseconds(0);
 		
